--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9"
-  }
+  },
+  "proxy": "https://dashtodd.visssible.com"
 }
